# rust-tide-template

./: .gitignore  Cargo.toml  README.md  config.example.toml  test_deadlock.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_create_user_table.rs
src/: auth.rs  cli.rs  common.rs  config.rs  database.rs  fs_utils.rs  http_server.rs  log_api.rs  logger.rs  logging.rs  main.rs  server.rs  test_logs.rs  utils.rs
src/entity/: mod.rs  user.rs
