[package]
name = "rust-tide-template"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0.82"
anyhow_ext = "0.2.1"
async-std = "1.12.0"
tide = "0.16.0"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std"] }
sea-query = { version = "0.30.7", default-features = false, features = [
	"backend-sqlite",
	"derive",
	"sea-query-derive",
	"thread-safe",
	"attr",
] }
serde = { version = "1.0.197", features = ["derive"] }
tikv-jemallocator = "0.5.4"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls", "rustls_crate"] }


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"

# this will reduce the development cache size
# [profile.dev.package."*"]
# opt-level = "z"
