[package]
name = "rust-tide-template"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0.82"
anyhow_ext = "0.2.1"
async-std = { version = "1.12.0", features = ["attributes"] }
tide = "0.16.0"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std"] }
sea-query = { version = "0.30.7", default-features = false, features = [
	"backend-sqlite",
	"derive",
	"sea-query-derive",
	"thread-safe",
	"attr",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tikv-jemallocator = "0.5.4"
surf = { version = "2.3.2", default-features = false, features = [
	"h1-client-rustls",
	"rustls_crate",
] }
rusty_ulid = "2.0.0"
fern = "0.7.1"
humantime = "2.1.0"
log = "0.4.22"
rustls_0181 = { version = "0.18.1", package = "rustls" }
base64-simd = "0.8.0"
dashmap = "6.1.0"
rand = "0.8.5"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"

# this will reduce the development cache size
# [profile.dev.package."*"]
# opt-level = "z"
