[package]
name = "rust-tide-template"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
anyhow_ext = "0.2.1"
async-std = { version = "1.12.0", features = ["attributes"] }
tide = "0.16.0"
toml = "0.8.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std"] }
sea-query = { version = "0.30.7", default-features = false, features = [
	"backend-sqlite",
	"derive",
	"sea-query-derive",
	"thread-safe",
	"attr",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tikv-jemallocator = "0.5.4"
base64-simd = "0.8.0"
dashmap = "6.1.0"
rand = "0.8.5"
time = { version = "0.3.47", features = ["formatting", "macros"] }
derive_builder = "0.20.2"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"

# this will reduce the development cache size
# [profile.dev.package."*"]
# opt-level = "z"
